--- a/funcventofcode.cabal
+++ b/funcventofcode.cabal
@@ -11,26 +11,25 @@ extra-doc-files:    CHANGELOG.md
 common warnings
     ghc-options: -Wall
 
-library
-    import:           warnings
-    exposed-modules:  MyLib
-    build-depends:    base ^>=4.17.2.1
-    hs-source-dirs:   src
-    default-language: GHC2021
 
-executable funcventofcode
-    import:           warnings
-    main-is:          Main.hs
-    build-depends:
-        base ^>=4.17.2.1,
-        funcventofcode
-    hs-source-dirs:   src/bin
-    default-language: GHC2021
+-- library
+--     import:           warnings
+--     exposed-modules:  MyLib
+--     build-depends:    base ^>=4.17.2.1
+--     hs-source-dirs:   src
+--     default-language: GHC2021
 
 executable 2019_01
     main-is:          2019_01.hs
     build-depends:
         base ^>=4.17.2.1,
-        funcventofcode
+    hs-source-dirs:   src/bin
+    default-language: GHC2021
+
+executable 2019_02
+    main-is:          2019_02.hs
+    build-depends:
+        base ^>=4.17.2.1,
+        split >=0.2
     hs-source-dirs:   src/bin
     default-language: GHC2021
