--- a/funcventofcode.cabal
+++ b/funcventofcode.cabal
@@ -49,3 +49,11 @@ executable 2019_04
         split >=0.2
     hs-source-dirs:   src/bin
     default-language: GHC2021
+
+executable 2019_08
+    main-is:          2019_08.hs
+    build-depends:
+        base ^>=4.17.2.1,
+        containers >=0.5
+    hs-source-dirs:   src/bin
+    default-language: GHC2021
